# image-mutator

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: build.yml
lib/include/: Driver.h  Image.h  Pixel.h
lib/src/: Driver.cpp  Image.cpp  Pixel.cpp
